--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,50 +1,58 @@
 object Form1: TForm1
-  Left = 470
-  Height = 477
+  Left = 358
+  Height = 342
   Top = 115
-  Width = 228
+  Width = 340
   Caption = 'Form1'
-  ClientHeight = 477
-  ClientWidth = 228
+  ClientHeight = 342
+  ClientWidth = 340
   Color = 16348727
   LCLVersion = '1.6.0.4'
-  object Button1: TButton
-    Left = 40
-    Height = 41
-    Top = 32
-    Width = 155
-    Caption = 'Нажмите на меня'
-    OnClick = Button1Click
+  object add_button: TButton
+    Left = 120
+    Height = 22
+    Top = 34
+    Width = 56
+    Caption = '+'
+    OnClick = add_buttonClick
     TabOrder = 0
   end
-  object Button2: TButton
-    Left = 40
-    Height = 144
-    Top = 88
-    Width = 155
-    Caption = 'кнопочка'
-    OnClick = Button2Click
-    TabOrder = 1
-  end
   object Label1: TLabel
-    Left = 40
+    Left = 272
     Height = 16
-    Top = 256
-    Width = 42
-    Caption = 'Label1'
+    Top = 37
+    Width = 63
+    Caption = 'результат'
     Color = 11942399
     ParentColor = False
     Transparent = False
     OnClick = Label1Click
   end
   object Edit1: TEdit
-    Left = 40
+    Left = 16
     Height = 22
-    Top = 296
-    Width = 155
+    Top = 34
+    Width = 104
     Color = clLime
     OnChange = Edit1Change
+    TabOrder = 1
+    Text = 'слаг.1'
+  end
+  object Edit2: TEdit
+    Left = 176
+    Height = 22
+    Top = 34
+    Width = 80
+    Color = clLime
     TabOrder = 2
-    Text = '53556597и8'
+    Text = 'слаг.2'
+  end
+  object Label2: TLabel
+    Left = 256
+    Height = 16
+    Top = 37
+    Width = 10
+    Caption = '='
+    ParentColor = False
   end
 end
