--- a/unit1.lfm
+++ b/unit1.lfm
@@ -45,5 +45,6 @@ object Form1: TForm1
     Color = clLime
     OnChange = Edit1Change
     TabOrder = 2
+    Text = 'Hello, my teacher!'
   end
 end
