--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,26 +1,26 @@
 object Form1: TForm1
-  Left = 358
-  Height = 342
-  Top = 115
+  Left = 360
+  Height = 339
+  Top = 112
   Width = 340
   Caption = 'Form1'
-  ClientHeight = 342
+  ClientHeight = 339
   ClientWidth = 340
-  Color = 16348727
+  Color = 16752033
   LCLVersion = '1.6.0.4'
   object add_button: TButton
     Left = 120
     Height = 22
     Top = 34
-    Width = 56
+    Width = 32
     Caption = '+'
     OnClick = add_buttonClick
     TabOrder = 0
   end
   object Label1: TLabel
-    Left = 272
+    Left = 240
     Height = 16
-    Top = 37
+    Top = 40
     Width = 63
     Caption = 'результат'
     Color = 11942399
@@ -39,20 +39,165 @@ object Form1: TForm1
     Text = 'слаг.1'
   end
   object Edit2: TEdit
-    Left = 176
+    Left = 152
     Height = 22
     Top = 34
-    Width = 80
+    Width = 72
     Color = clLime
     TabOrder = 2
     Text = 'слаг.2'
   end
   object Label2: TLabel
-    Left = 256
+    Left = 224
     Height = 16
-    Top = 37
+    Top = 40
     Width = 10
     Caption = '='
+    Color = clForm
     ParentColor = False
+    Transparent = False
+  end
+  object sub_button: TButton
+    Left = 120
+    Height = 22
+    Top = 104
+    Width = 32
+    Caption = '-'
+    Color = clWhite
+    OnClick = sub_buttonClick
+    TabOrder = 3
+  end
+  object Label3: TLabel
+    Left = 224
+    Height = 16
+    Top = 110
+    Width = 10
+    Caption = '='
+    Color = clForm
+    ParentColor = False
+    Transparent = False
+  end
+  object Label4: TLabel
+    Left = 240
+    Height = 16
+    Top = 110
+    Width = 63
+    Caption = 'результат'
+    Color = 10948859
+    ParentColor = False
+    Transparent = False
+  end
+  object Edit3: TEdit
+    Left = 16
+    Height = 22
+    Top = 104
+    Width = 104
+    Color = 5898083
+    TabOrder = 4
+    Text = 'умен.'
+  end
+  object Edit4: TEdit
+    Left = 152
+    Height = 22
+    Top = 104
+    Width = 72
+    Color = 5898083
+    TabOrder = 5
+    Text = 'вычит.'
+  end
+  object Edit5: TEdit
+    Left = 16
+    Height = 22
+    Top = 176
+    Width = 104
+    Color = 5898083
+    TabOrder = 6
+    Text = 'множ.1'
+  end
+  object Edit6: TEdit
+    Left = 152
+    Height = 22
+    Top = 176
+    Width = 72
+    Color = 5898083
+    TabOrder = 7
+    Text = 'множ.2'
+  end
+  object Label5: TLabel
+    Left = 224
+    Height = 16
+    Top = 182
+    Width = 10
+    Caption = '='
+    Color = clWhite
+    ParentColor = False
+    Transparent = False
+  end
+  object Label6: TLabel
+    Left = 240
+    Height = 16
+    Top = 182
+    Width = 63
+    Caption = 'результат'
+    Color = 9830646
+    ParentColor = False
+    Transparent = False
+  end
+  object myl_button: TButton
+    Left = 120
+    Height = 22
+    Top = 176
+    Width = 32
+    Caption = '*'
+    Color = clWhite
+    OnClick = myl_buttonClick
+    TabOrder = 8
+  end
+  object div_button: TButton
+    Left = 120
+    Height = 22
+    Top = 240
+    Width = 32
+    Caption = '/'
+    OnClick = div_buttonClick
+    TabOrder = 9
+  end
+  object Label7: TLabel
+    Left = 224
+    Height = 16
+    Top = 246
+    Width = 10
+    Caption = '='
+    Color = clWhite
+    ParentColor = False
+    Transparent = False
+  end
+  object Label8: TLabel
+    Left = 240
+    Height = 16
+    Top = 246
+    Width = 63
+    Caption = 'результат'
+    Color = 8650993
+    ParentColor = False
+    Transparent = False
+  end
+  object Edit7: TEdit
+    Left = 16
+    Height = 22
+    Top = 240
+    Width = 104
+    Color = 5898083
+    TabOrder = 10
+    Text = 'делимое'
+  end
+  object Edit8: TEdit
+    Left = 152
+    Height = 22
+    Top = 240
+    Width = 72
+    Color = 5898083
+    TabOrder = 11
+    Text = 'делитель'
   end
 end
