--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,7 +1,7 @@
 object Form1: TForm1
-  Left = 360
+  Left = 357
   Height = 339
-  Top = 112
+  Top = 113
   Width = 340
   Caption = 'Form1'
   ClientHeight = 339
@@ -87,11 +87,74 @@ object Form1: TForm1
   object sqrt_button: TButton
     Left = 40
     Height = 25
-    Top = 88
+    Top = 96
     Width = 80
     Caption = ' корень'
     Color = clWhite
     OnClick = sqrt_buttonClick
     TabOrder = 6
+  end
+  object Button1: TButton
+    Left = 184
+    Height = 25
+    Top = 168
+    Width = 72
+    Caption = 'Button1'
+    OnClick = Button1Click
+    TabOrder = 7
+  end
+  object Button2: TButton
+    Left = 120
+    Height = 25
+    Top = 168
+    Width = 64
+    Caption = 'Button2'
+    OnClick = Button2Click
+    TabOrder = 8
+  end
+  object Button3: TButton
+    Left = 40
+    Height = 25
+    Top = 168
+    Width = 80
+    Caption = 'Button3'
+    OnClick = Button3Click
+    TabOrder = 9
+  end
+  object Button4: TButton
+    Left = 40
+    Height = 25
+    Top = 120
+    Width = 80
+    Caption = '1/'
+    Color = clWhite
+    OnClick = Button4Click
+    TabOrder = 10
+  end
+  object Button5: TButton
+    Left = 120
+    Height = 25
+    Top = 96
+    Width = 64
+    Caption = 'M+'
+    OnClick = Button5Click
+    TabOrder = 11
+  end
+  object Button6: TButton
+    Left = 120
+    Height = 25
+    Top = 120
+    Width = 64
+    Caption = 'M-'
+    TabOrder = 12
+  end
+  object Button7: TButton
+    Left = 184
+    Height = 25
+    Top = 96
+    Width = 72
+    Caption = 'MC'
+    OnClick = Button7Click
+    TabOrder = 13
   end
 end
