--- a/unit1.lfm
+++ b/unit1.lfm
@@ -172,8 +172,17 @@ object Form1: TForm1
     Height = 25
     Top = 144
     Width = 80
-    Caption = 'Div'
+    Caption = 'проверка'
     OnClick = Button6Click
     TabOrder = 15
+  end
+  object Button7: TButton
+    Left = 120
+    Height = 25
+    Top = 144
+    Width = 64
+    Caption = 'делители'
+    OnClick = Button7Click
+    TabOrder = 16
   end
 end
