--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,10 +1,10 @@
 object Form1: TForm1
   Left = 357
-  Height = 339
-  Top = 113
+  Height = 552
+  Top = 114
   Width = 340
   Caption = 'Form1'
-  ClientHeight = 339
+  ClientHeight = 552
   ClientWidth = 340
   Color = 16752033
   LCLVersion = '1.6.0.4'
@@ -184,5 +184,22 @@ object Form1: TForm1
     Caption = 'делители'
     OnClick = Button7Click
     TabOrder = 16
+  end
+  object Button8: TButton
+    Left = 184
+    Height = 25
+    Top = 144
+    Width = 72
+    Caption = 'пр. дел.'
+    OnClick = Button8Click
+    TabOrder = 17
+  end
+  object Image1: TImage
+    Left = 10
+    Height = 40
+    Top = 264
+    Width = 54
+    OnClick = Image1Click
+    OnMouseDown = Image1MouseDown
   end
 end
